<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app=""
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:text="@string/Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/login_edittext_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Input_Username"/>
    <TextView
        android:text="@string/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/login_edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Input_Password"/>

</LinearLayout>