<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dip">

    <TextView
        android:text="@string/nutritional_contents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        android:id="@+id/textView"/>

    <FrameLayout
        android:id="@+id/result_nfacts"  android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:orientation="horizontal"  android:layout_weight="4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dip"        >

        <Button
            android:text="@string/detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/result_details"
            android:layout_weight="1"
            style="?android:attr/button" />

        <Button
            android:text="@string/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/result_finish"
            android:layout_weight="1"
            style="?android:attr/button" />
    </LinearLayout>

</LinearLayout>
